RESOLVED FIXED228682
REGRESSION (Safari 15): Unable to repaint canvases with software filters when GPU Process is enabled
https://bugs.webkit.org/show_bug.cgi?id=228682
Summary REGRESSION (Safari 15): Unable to repaint canvases with software filters when...
Wenson Hsieh
Reported 2021-07-31 11:13:32 PDT
Attachments
For EWS (15.38 KB, patch)
2021-07-31 17:28 PDT, Wenson Hsieh
no flags
Typo fix (15.30 KB, patch)
2021-08-01 09:55 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-07-31 11:15:28 PDT
To reproduce, enable GPU Process for canvas and go to <https://whsieh.github.io/examples/canvas-filter> Expected: Arrow in the canvas (right box) should animate. Observed: No animation. Unchecking "Apply filter" (which removes the CSS filter from the canvas element) causes the animation to reappear.
Wenson Hsieh
Comment 2 2021-07-31 17:28:26 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2021-08-01 09:55:58 PDT
Created attachment 434723 [details] Typo fix
Wenson Hsieh
Comment 4 2021-08-02 10:31:07 PDT
Comment on attachment 434723 [details] Typo fix Thanks for the review!
EWS
Comment 5 2021-08-02 10:44:34 PDT
Committed r280543 (240170@main): <https://commits.webkit.org/240170@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434723 [details].
Note You need to log in before you can comment on or make changes to this bug.